--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  intl: ^0.17.0
   cupertino_icons: ^1.0.2
   otp_text_field: ^1.1.3
   google_fonts: ^3.0.1
@@ -41,6 +38,7 @@ dependencies:
   #for using getx
   http:
   shared_preferences: ^2.0.15
+
 
 dev_dependencies:
   flutter_test:
