--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^3.0.1
   dio:
   get: ^4.6.5
+  smooth_page_indicator: ^1.0.0+2
   #for using getx
   http:
   shared_preferences: ^2.0.15
