--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   shared_preferences: ^2.0.15
   image_picker: ^0.8.5+3
 
-
+  url_launcher: ^6.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
