--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   http:
   shared_preferences: ^2.0.15
   image_picker: ^0.8.5+3
-
+  share_plus: ^6.3.0
   url_launcher: ^6.0.4
 dev_dependencies:
   flutter_test:
